# Event-Management-System

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  events.py  permissions.py  versions.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  event.py  permission.py  token.py  user.py  version.py
app/schemas/: __init__.py  user.py
app/services/: auth.py  event.py  permission.py  user.py  version.py
ems/api/v1/: auth_router.py  versions_router.py
ems/core/: config.py
ems/models/: __init__.py  event_model.py  permission_model.py  token_model.py  user_model.py  version_model.py
ems/schemas/: event_schema.py  permission_schema.py  token_schema.py  user_schema.py  version_schema.py
ems/services/: event_service.py  permission_service.py
ems/utils/: rate_limit.py
src/ems/: __init__.py  main.py
src/ems/api/: deps.py
src/ems/api/v1/: auth_router.py  events_router.py  permissions_router.py  versions_router.py
src/ems/core/: security.py
src/ems/db/: session.py
src/ems/dependencies/: deps.py
src/ems/schemas/: __init__.py  event_schema.py  permission_schema.py
src/ems/services/: auth_service.py  event_service.py  user_service.py  version_service.py
src/ems/utils/: helper.py
